--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -1,7 +1,12 @@
-<% if (documentclass == 'lncs') { -%>
+<% switch (documentclass) {
+  case "lncs": -%>
 % This template has been tested with LLNCS DOCUMENT CLASS -- version 2.20 (10-Mar-2018)
-
-<% } -%>
+<%  break;
+  case "ieee":  -%>
+% This template has been tested with IEEEtran of 2015.
+<%
+break;
+} -%>
 % !TeX spellcheck = en-US
 % !TeX encoding = utf8
 % !TeX program = <%= latexcompiler %>
@@ -16,7 +21,8 @@
 %     For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
 \RequirePackage{kvoptions-patch}
 <% } -%>
-<% if (documentclass == 'lncs') { -%>
+<% switch (documentclass) {
+  case "lncs": -%>
 
 % "a4paper" enables:
 %
@@ -38,7 +44,18 @@
 %
 % To disable outputting page headers and footers, remove "runningheads"
 \documentclass[runningheads,a4paper,english]{llncs}[2018/03/10]
-<% } else {-%>
+<%  break;
+case "ieee": -%>
+
+% DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
+\documentclass[conference,compsoc]{IEEEtran}[2015/08/26]
+
+% Balance the last page
+% The pbalance package (see https://ctan.org/pkg/pbalance) "just works" (in contrast to balance.sty or other solutions)
+\usepackage{pbalance}
+
+<%  break;
+default:  -%>
 \documentclass[
   % fontsize=11pt is the standard
   numbers=noenddot,
@@ -54,7 +71,7 @@
   %               draft    % um zu sehen, wo noch nachgebessert werden muss - wichtig, da Bindungskorrektur mit drin
   draft=false
 ]{scrbook}
-<% } -%>
+<% break; } -%>
 
 % backticks (`) are rendered as such in verbatim environments.
 % See following links for details:
@@ -85,24 +102,10 @@
 
 <%- include('booktabs.preamble.en.tex', this); %>
 <%- include('paralist.preamble.en.tex', this); %>
+<% if (documentclass == 'lncs' || documentclass == 'ieee')  { -%>
+<%- include('natbib.preamble.en.tex', this); %>
+<% } -%>
 <% if (documentclass == 'lncs')  { -%>
-<%- include('floatflt.preamble.en.tex', this); %>
-% Bibliopgraphy enhancements
-%  - enable \cite[prenote][]{ref}
-%  - enable \cite{ref1,ref2}
-% Alternative: \usepackage{cite}, which enables \cite{ref1, ref2} only (otherwise: Error message: "White space in argument")
-
-% Doc: http://texdoc.net/natbib
-\usepackage[%
-  square,        % for square brackets
-  comma,         % use commas as separators
-  numbers,       % for numerical citations;
-%  sort,          % orders multiple citations into the sequence in which they appear in the list of references;
-  sort&compress, % as sort but in addition multiple numerical citations
-                 % are compressed if possible (as 3-6, 15);
-]{natbib}
-% In the bibliography, references have to be formatted as 1., 2., ... not [1], [2], ...
-\renewcommand{\bibnumfmt}[1]{#1.}
 
 % Prepare more space-saving rendering of the bibliography
 % Source: https://tex.stackexchange.com/a/280936/9075
@@ -114,6 +117,7 @@
 { encoding = {OT1,T1,TS1} }
 { }
 
+<%- include('floatflt.preamble.en.tex', this); %>
 <% } -%>
 <% if (todo == 'pdfcomment') { -%>
 <%- include('pdfcomment.preamble.en.tex', this); %>
