--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -49,7 +49,7 @@ case "ieee": -%>
 
 % DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
 % For the final version, replace "draftcls" by "final"
-\documentclass[draftcls,<%= ieee_variant %>,<%= papersize %>paper]{IEEEtran}[2015/08/26]
+\documentclass[<%= ieee_variant %>,<%= papersize %>paper]{IEEEtran}[2015/08/26]
 
 % Balance the last page
 % The pbalance package (see https://ctan.org/pkg/pbalance) "just works" (in contrast to balance.sty or other solutions)
