--- a/generators/app/templates/natbib.preamble.en.tex
+++ b/generators/app/templates/natbib.preamble.en.tex
@@ -4,29 +4,31 @@
 % Alternative: \usepackage{cite}, which enables \cite{ref1, ref2} only (otherwise: Error message: "White space in argument")
 
 % Doc: http://texdoc.net/natbib
-\ifCLASSOPTIONcompsoc
-  % IEEE Computer Society needs nocompress option at cite.sty
-  % natbib includes the same functionality
-  \usepackage[%
-    square,        % for square brackets
-    comma,         % use commas as separators
-    numbers,       % for numerical citations;
-    sort           % orders multiple citations into the sequence in which they appear in the list of references;
-    %sort&compress % as sort but in addition multiple numerical citations
-                   % are compressed if possible (as 3-6, 15);
-  ]{natbib}
-\else
-  % normal IEEE or LNCS
-  \usepackage[%
-    square,        % for square brackets
-    comma,         % use commas as separators
-    numbers,       % for numerical citations;
-    %sort           % orders multiple citations into the sequence in which they appear in the list of references;
-    sort&compress % as sort but in addition multiple numerical citations
-                   % are compressed if possible (as 3-6, 15);
-  ]{natbib}
+<% if (ieee_compsoc) { -%>
+%\ifCLASSOPTIONcompsoc
+% IEEE Computer Society needs nocompress option at cite.sty
+% natbib includes the same functionality
+\usepackage[%
+  square,        % for square brackets
+  comma,         % use commas as separators
+  numbers,       % for numerical citations;
+  sort           % orders multiple citations into the sequence in which they appear in the list of references;
+  %sort&compress % as sort but in addition multiple numerical citations
+                % are compressed if possible (as 3-6, 15);
+]{natbib}
+<% } else { -%>
+<# normal IEEE or LNCS -%>
+\usepackage[%
+  square,        % for square brackets
+  comma,         % use commas as separators
+  numbers,       % for numerical citations;
+  %sort           % orders multiple citations into the sequence in which they appear in the list of references;
+  sort&compress % as sort but in addition multiple numerical citations
+                  % are compressed if possible (as 3-6, 15);
+]{natbib}
 \fi
-<% if (documentclass == 'lncs')  { -%>
+<% } -%>
+<% if (documentclass == 'lncs') { -%>
 
 % In the bibliography, references have to be formatted as 1., 2., ... not [1], [2], ...
 \renewcommand{\bibnumfmt}[1]{#1.}
