--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -17,26 +17,62 @@
 <% } -%>
 % !BIB program = <%= bibtextool %>
 % -*- coding:utf-8 mod:LaTeX -*-
-<% if (documentclass == 'scientific-thesis') { -%>
-
-% The following package allows \\ at the title page
-% For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
-\RequirePackage{kvoptions-patch}
-<% } -%>
 <% if (latexcompiler !== 'lualatex') { -%>
-
 % Neue deutsche Trennmuster
 % Siehe http://www.ctan.org/pkg/dehyph-exptl und http://projekte.dante.de/Trennmuster/WebHome
 % Nur für pdflatex, nicht für lualatex
 \RequirePackage[ngerman=ngerman-x-latest]{hyphsubst}
 <% } -%>
+<% switch (documentclass) { case "lncs": -%>
 
-<% if (documentclass == 'lncs') { -%>
-% "runningheads" zeigt Author + Titel auf jeder Seite.
+% "a4paper" enables:
+%
+%  - easy print out on DIN A4 paper size
+%
+% One can configure a4 vs. letter in the LaTeX installation. So it is configuration dependend, what the paper size will be.
+% This option  present, because the current word template offered by Springer is DIN A4.
+% We accept that DIN A4 cause WTFs at persons not used to A4 in USA.
+%
+% "runningheads":
+%
+%  - zeigt Author + Titel auf jeder Seite.
+%  - Während des Schreibens und das Review des Papers hilft das, um z.B. auf konkrete Seitenzahlen einfach verweisen zu können.
+%
+% This is good for other readers to enable proper archiving among other papers and pointing to
+% content. Even if the title page states the title, when printed and stored in a folder, when
+% blindly opening the folder, one could hit not the title page, but an arbitrary page. Therefore,
+% it is good to have title printed on the pages, too.
+%
 % Diese Option nach Aufforderung durch die Herausgeber entfernen.
-% Während des Schreibens und das Review des Papers hilft das, um z.B. auf konkrete Seitenzahlen einfach verweisen zu können.
-\documentclass[runningheads,a4paper,ngerman]{llncs}[2022/01/12]
-<% } else {-%>
+%
+% To disable outputting page headers and footers, remove "runningheads"
+\documentclass[runningheads,<%= papersize %>paper,ngerman]{llncs}[2022/01/12]
+<% break; case "acmart": -%>
+
+<% if (texlive >= 2021) { -%>
+% We balance the last page using the package "pbalance" (see https://ctan.org/pkg/pbalance), because it "just works" (in contrast to balance.sty or other solutions)
+<% } -%>
+\documentclass[<%= acm_format %>,<% if (acm_review) { %>review,<% } %><%= papersize %>paper,<% if (texlive >= 2021) { %>pbalance<% } else { %>balance<% } %>]{acmart}
+<% break; case "ieee": -%>
+
+% DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
+% For the final version, replace "draftcls" by "final"
+\documentclass[<%= ieee_variant %>,<%= papersize %>paper]{IEEEtran}[2015/08/26]
+<% if (texlive >= 2021) { -%>
+
+% Balance the last page
+% The pbalance package (see https://ctan.org/pkg/pbalance) "just works" (in contrast to balance.sty or other solutions)
+\usepackage{pbalance}
+<% } else { -%>
+
+% Balance the last page using the balance package (see https://ctan.org/pkg/balance)
+\usepackage{balance}
+<% } -%>
+<% break; case "scientific-thesis": -%>
+
+% The following package allows \\ at the title page
+% For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
+\RequirePackage{kvoptions-patch}
 \documentclass[
   % fontsize=11pt is the standard
   % ()Aus scrguide.pdf - der Dokumentation von KOMA-Script)
