--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -62,8 +62,8 @@
 <% } -%>
 <% break; case "scientific-thesis": -%>
 
-% EN: The following package allows \\ at the title page
-%     For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
+% The following package allows \\ at the title page
+% For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
 \RequirePackage{kvoptions-patch}
 \documentclass[
   % fontsize=11pt is the standard
