--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -412,9 +412,8 @@ Hier bitte einen kurzen Durchgang durch die Arbeit.
 \newcount\LTGendlineexample
 \newenvironment{ltgexample}%
 {\LTGbeginlineexample=\numexpr\inputlineno+1\relax}%
-{%
-\LTGendlineexample=\numexpr\inputlineno-1\relax%
-
+{\LTGendlineexample=\numexpr\inputlineno-1\relax%
+%
 \tcbinputlisting{%
   listing only,
   listing file=\currfilepath,
