--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -184,7 +184,9 @@
 
 <%- include('siunitx.preamble.en.tex'); %>
 <%- include('hyperref.preamble.de.tex', this); %>
-<% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %><% } -%>
+<%- include('subfig.preamble.en.tex', this); %>
+<% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %>
+<% } -%>
 <%- include('cleveref.preamble.de.tex', this); %>
 \usepackage{lipsum}
 <% if (examples) { -%>
